--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "composite": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist/types",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
