--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,6 +6,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "composite": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist/types",
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -16,7 +19,6 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
