--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/babel-preset-css-prop": "^11.12.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "react": "^19.1.0",
@@ -29,11 +30,13 @@
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.26.0",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.2",
+    "@types/babel__core": "^7",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.26.0",
