--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,46 +1,7 @@
 {
-  "compilerOptions": {
-    /* 기본 설정 */
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
-    "skipLibCheck": true,
-
-    /* 모듈 해석 설정 */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,  /* 선언 파일 생성 비활성화 */
-    "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-
-    /* React 설정 */
-    "jsx": "react-jsx",
-    "jsxImportSource": "@emotion/react",
-
-    /* 린팅 설정 */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-
-    /* 경로 별칭 설정 */
-    "baseUrl": "./",
-    "paths": {
-      "@apis/*": ["src/apis/*"],
-      "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
-      "@hooks/*": ["src/hooks/*"],
-      "@pages/*": ["src/pages/*"],
-      "@constants/*": ["src/constants/*"],
-      "@types/*": ["src/types/*"],
-      "@styles/*": ["src/styles/*"],
-      "@utils/*": ["src/utils/*"]
-    }
-  },
-  "include": ["src", "custom.d.ts", "vite.config.ts"],
-  "exclude": ["node_modules", "dist"]
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
+  ]
 }
